@@ -36,10 +36,12 @@ namespace Direct3D10
 	{
 		m_Name = gcnew String( native.Name );
 		m_Annotations = native.Annotations;
-		m_Signature = gcnew D3DCompiler::ShaderSignature( gcnew DataStream( native.pIAInputSignature, native.IAInputSignatureSize, true, false ) );
 		m_StencilRef = native.StencilRef;
 		m_SampleMask = native.SampleMask;
 		m_BlendFactor = Color4( native.BlendFactor[ 3 ], native.BlendFactor[ 0 ], native.BlendFactor[ 1 ], native.BlendFactor[ 2 ] );
+
+		if (native.pIAInputSignature && native.IAInputSignatureSize)
+			m_Signature = gcnew D3DCompiler::ShaderSignature(gcnew DataStream(native.pIAInputSignature, native.IAInputSignatureSize, true, false));
 	}
 	
 	String^ EffectPassDescription::Name::get()
